--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -3,11 +3,13 @@ layout: default
 title: Resume
 keywords: Resume
 ---
-
+<!--
 		<div class="container">
                   <iframe src="http://docs.google.com/gview?url=https://github.com/OrlandoAguilar/OrlandoAguilar.github.io/raw/master/Resume/Resume.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
 		
-        </div><!-- /.container -->
+        </div>
+		-->
+		<!-- /.container -->
 
         <h3>LinkedIn</h3>
         <p><a href="https://www.linkedin.com/in/orlandoaguilarvivanco">Go to my profile.</a></p>
