--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@ title: Orlando Aguilar Vivanco
 keywords: programmer, games, graphics, image processing, oculus
 ---
 
-<p>I am a graphics programmer; working now in Gearbox Software.</p>
+<p>I am a graphics programmer; working now in Qualcomm as an engineer in the gpu department.</p>
 
-<p>My expertise is in image processing, computer graphics and game development. I obtained a Master Degree in computer sciences in DigiPen Institute of Technology, and graduated as an Engineer in Electronic and Computer Sciences in Universidad de Guadalajara.</p>
+<p>My expertise is in image processing, computer graphics and game development. I obtained a Master Degree in computer sciences in DigiPen Institute of Technology.</p>
 
 <p>
 	Some of my projects can be found in my <a href="/Portfolio/Portfolio.html">Portfolio</a>.
 </p>
 
+<!--
 <p>
 	I have also published recently an article in IEEE entitled <a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7222843&filter%3DAND(p_IS_Number%3A7222827)">Characterization of Nanotube Structures Using Digital-Segmented Images</a>, about using image processing to measure the thickness of nanotubes.
 </p>
+-->
 
 <p>
 	I have had the oportunity to work in projects using custom game engines, Oculus and even UE4 and Unity.
