--- a/Portfolio/Videos/ElAnimalario3dInteractiveBook/ElAnimalario.html
+++ b/Portfolio/Videos/ElAnimalario3dInteractiveBook/ElAnimalario.html
@@ -9,7 +9,7 @@ keywords: programmer, games, graphics, bennugd
             <iframe width="420" height="315" src="https://www.youtube.com/embed/5b8UQqPXHKg" frameborder="0" allowfullscreen></iframe>
         </div><!-- /.container -->
     </center>
-    <p>This project is an electronic version of the book: "Animalario universal del profesor Revillod". This project was created during my bachelor's degree.</p>
+    <p>This project is an electronic version of the book: "Animalario universal del profesor Revillod".</p>
 
     <p>
         In this project I was the programmer in charge of the 3D part and the physics.
